--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
 	<title>Hello!</title>
 </head>
 <body>
-	<h1>Welcome to my World</h1> 
+	<h1 style "color: Green">Welcome to my World</h1> 
 	Hello World!
 
 </body>
