Add exclamation point

--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,8 @@
 	<title>Hello!</title>
 </head>
 <body>
-	<h1>Welcome to my World</h1> 
+	<h1>Welcome to my World!!</h1> 
 	Hello World!
-
+	<p>Sunshine Rising</p>
 </body>
 </html>
